courses/430_programming-languages/assignment-5/tests/error/error22.sml
val prog =
  PROGRAM
    {decls=["f"],
     func_decls=[("g",{body=[],decls=[],params=[]}),
                 ("f",{body=[],decls=[],params=[]})],stmts=[]} : program
;
